<resources>
    <string name="app_name">ITCreditOnline</string>
    <string name="phone_number_reg">Phone number</string>
    <string name="register_reg">Register</string>
    <string name="address_reg">Address</string>
    <string name="email_reg">Email</string>
    <string name="password_reg">Password</string>
    <string name="password_again_reg">Repeat Password</string>
    <string name="name_reg">Name</string>
    <string name="username_reg">Username</string>
    <string name="surName_reg">Surname:</string>
    <string name="id_et">ID</string>
    <string name="username_info">Username:</string>
    <string name="name_info">Name:</string>
    <string name="address_info">Address:</string>
    <string name="email_info">Email:</string>
    <string name="phone_info">Phone:</string>
    <string name="account_information">Account information</string>



    <string name="loremIpsum">ITCreditOnline is a consumer loan (between 100 and 2,100 leva) for a period of 1 to 18 months.
        The loan is paid through pre-agreed fixed installments every week.
        These payments include principal and interest. For all its customers by providing a weekly
        collection of installment from their homes - convenient and easy!
        Without having customers wait in lines or visit remote offices.</string>

    <string name="credit_information">Credit information</string>
    <string name="what_u_want_to_calculate">What do you want to calculate?</string>
    <string name="parameters_credit">Parameters of the credit:</string>
    <string name="what_is_the_amount_of_annual_interest">What is the amount of annual interest?</string>
    <string name="how_long_will_back_the_loan">For how long will I pay the loan?</string>
    <string name="what_is_the_maximum_amount_i_can_withdraw">What is the maximum amount I can withdraw?</string>
    <string name="how_much_is_the_monthly_installment">How much is the monthly installment?</string>
    <string name="lv">lv.</string>
    <string name="month">month</string>
    <string name="clean">Clean</string>
    <string name="calculate">Calculate</string>
    <string name="service_for_contributions_is_very_convenient_for_most_of_our_clients_it_allows_them_to_take_care_of_their_daily_duties_without_unnecessary_devote_time_to_service_the_loan_on_the_other_hand_allows_our_credit_consultants_to_become_better_acquainted_with_customers_to_understand_their_needs_and_to_be_able_to_give_adequate_advice_and_offer_the_best_possible_service_just_personal_service_at_home_differs_service_we_offer_from_the_standard_ways_of_providing_credit">Service for contributions is very convenient for most of our clients. It allows them to take care of their daily duties without unnecessary devote time to service the loan. On the other hand, allows our Credit Consultants to become better acquainted with customers to understand their needs and to be able to give adequate advice and offer the best possible service. Just personal service at home differs service we offer, from the standard ways of providing credit.</string>
    <string name="decision_to_grant_the_loan_is_taken_only_on_the_basis_of_information_provided_by_clients_the_more_the_more_accurate_and_clearer_it_is_the_easier_and_faster_our_software_products_and_credit_inspectors_will_be_able_to_determine_the_optimal_option_for_each_client_and_this_will_increase_the_likelihood_that_you_will_be_granted_the_desired_amount">Decision to grant the loan is taken only on the basis of information provided by clients. The more, the more accurate and clearer it is, the easier and faster our software products and Credit Inspectors will be able to determine the optimal option for each client and this will increase the likelihood that you will be granted the desired amount.</string>
    <string name="itcreditonline_has_been_certified_for_administrator_of_personal_data_by_the_commission_for_the_protection_of_personal_data_personal_data_of_our_customers_are_protected_and_company_store_and_use_them_in_strict_compliance_with_the_provisions_of_the_law_on_protection_of_personal_data">\'ITCREDITONLINE\' has been certified for administrator of personal data by the Commission for the protection of personal data. Personal data of our customers are protected and Company store and use them in strict compliance with the provisions of the Law on Protection of Personal Data.</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="surname">Surname</string>
    <string name="id">ID:</string>
    <string name="log_out">Log out</string>
    <string name="apply_for_credit">Apply for credit</string>
    <string name="duration">Duration:</string>
    <string name="total_sum_for_return">Total sum for return:</string>
    <string name="apply">Apply</string>
    <string name="no_credits_added">No Credits Added</string>
    <string name="no_internet_connection">No internet Connection</string>
	<string name="surname_reg_form">Surname:</string>
    <string name="it_credit_online">IT CREDIT ONLINE</string>
    <string name="register_activity">Register</string>
    <string name="change">CHANGE</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="LoanAm">Loan amount:</string>
    <string name="TermAmoan">Term of the loan in months:</string>
    <string name="RateAnnual">Annual interest rate:</string>
    <string name="MonthlyPay">Optimum monthly payment:</string>
    <string name="ManyPay">How many months can I pay:</string>
    <string name="MonthlyInstal">Amount of monthly installment:</string>
    <string name="TermOfLoan">Term of the loan in months:</string>
    <string name="LessThan">Paid sum is less than withdrawn sum.</string>
    <string name="MaxAmmErr">Maximum amount of credit is too high to display</string>
    <string name="HigherMsg">Enter higher monthly installment</string>


</resources>
