<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.itcreditonline.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/logo" />


            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:mtf_image="@drawable/icon_username"
                app:mtf_labelColor="#700"
                android:layout_gravity="center"
                app:mtf_openKeyboardOnFocus="true">

                <EditText
                    android:id="@+id/username_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/username"
                    android:textColor="@color/black"
                    android:textColorHint="#700"
                    android:textSize="15sp" />

            </com.github.florent37.materialtextfield.MaterialTextField>

            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:mtf_image="@drawable/icon_password"
                app:mtf_labelColor="#700"
                android:layout_gravity="center"
                app:mtf_openKeyboardOnFocus="true">

                <EditText
                    android:id="@+id/password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </com.github.florent37.materialtextfield.MaterialTextField>

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:text="@string/login"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_regiter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/register"
                android:textColor="@color/white" />


            <Button
                android:id="@+id/button_login_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:text="Facebook Login"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
