<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="20dp"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/account_information"
                android:textSize="30sp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:text="@string/username_info"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/user_username"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="22sp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/name_info"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textSize="22sp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/surname_reg_form"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/user_surname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textSize="22sp" />
                <EditText
                    android:id="@+id/user_surname_et"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:visibility="gone"
                    android:gravity="center"
                    android:inputType="textShortMessage"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textSize="22sp" />


                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@string/change"
                    android:layout_margin="1dp"
                    android:layout_gravity="center"
                    android:id="@+id/btn_change_surname"
                    android:textColor="@color/white"
                    android:layout_weight="1"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@string/ok"
                    android:visibility="gone"
                    android:layout_gravity="center"
                    android:id="@+id/btn_confirm_surname"
                    android:textColor="@color/white"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/address_info"
                    android:textColor="@color/black"
                    android:textSize="19sp"
                    android:layout_gravity="center"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/user_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textSize="22sp" />
                <EditText
                    android:id="@+id/user_address_et"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:visibility="gone"
                    android:gravity="center"
                    android:inputType="textShortMessage"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textSize="22sp" />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@string/change"
                    android:layout_margin="1dp"
                    android:layout_gravity="center"
                    android:id="@+id/btn_change_address"
                    android:textColor="@color/white"
                    android:layout_weight="1"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@string/ok"
                    android:visibility="gone"
                    android:layout_gravity="center"
                    android:id="@+id/btn_confirm_address"
                    android:textColor="@color/white"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/email_info"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/user_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textSize="18sp"/>
                <EditText
                    android:id="@+id/user_email_et"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:lines="1"
                    android:visibility="gone"
                    android:gravity="center"
                    android:inputType="textEmailAddress"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@string/change"
                    android:layout_margin="1dp"
                    android:layout_gravity="center"
                    android:id="@+id/btn_change_email"
                    android:textColor="@color/white"
                    android:layout_weight="1"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@string/ok"
                    android:visibility="gone"
                    android:layout_gravity="center"
                    android:id="@+id/btn_confirm_email"
                    android:textColor="@color/white"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/phone_info"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/user_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textSize="22sp" />
                <EditText
                    android:id="@+id/user_phone_et"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:visibility="gone"
                    android:gravity="center"
                    android:inputType="phone"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textSize="22sp" />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@string/change"
                    android:layout_gravity="center"
                    android:id="@+id/btn_change_phone"
                    android:textColor="@color/white"
                    android:layout_weight="1"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@string/ok"
                    android:visibility="gone"
                    android:layout_gravity="center"
                    android:id="@+id/btn_confirm_phone"
                    android:textColor="@color/white"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/id"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/user_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textSize="22sp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:id="@+id/cancel_edit_btn"
                android:textColor="@color/white"
                android:visibility="gone"
                android:background="@color/colorPrimary"/>

            <Button
                android:id="@+id/log_out_button"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"
                android:layout_height="wrap_content"
                android:text="@string/log_out" />

            <!--- for vertical view-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>